force-app/main/default/objects/Portfolio_Deal__c/Portfolio_Deal__c.object-meta.xml
<CustomObject>
    <description>One inbound broker email that named two or more properties. Groups the Leads, Opportunities and Properties created from that single email so the Acquisitions team can work a portfolio deal as one deal. Created by the Broker Protection pipeline; never created by hand. Phase B1 structural clone of Property_Package__c, which remains live until Phase B5.</description>
    <label>Portfolio Deal</label>
    <nameField>
        <label>Deal Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Portfolio Deals</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>