force-app/main/default/objects/Portfolio_Deal__c/fields/Broker_Email__c.field-meta.xml
<CustomField>
    <fullName>Broker_Email__c</fullName>
    <description>The resolved broker email address for the inbound email that produced this portfolio deal (post envelope-sender arbitration).</description>
    <inlineHelpText>Do not edit directly. Populated by the Broker Protection pipeline from the resolved broker identity.</inlineHelpText>
    <label>Broker Email</label>
    <type>Email</type>
</CustomField>