force-app/main/default/objects/Portfolio_Deal__c/fields/Property_Count__c.field-meta.xml
<CustomField>
    <fullName>Property_Count__c</fullName>
    <description>Count of distinct properties named in the source email that produced this portfolio deal.</description>
    <inlineHelpText>Do not edit directly. Set by the Broker Protection pipeline when the portfolio deal is created.</inlineHelpText>
    <label>Property Count</label>
    <precision>2</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>