force-app/main/default/objects/Portfolio_Deal__c/fields/Routed_Outcomes__c.field-meta.xml
<CustomField>
    <fullName>Routed_Outcomes__c</fullName>
    <description>Full per-property routing audit for the source email: address, outcome, and the record it routed to for every property named, including properties won by another broker.</description>
    <inlineHelpText>Do not edit directly. Set by the Broker Protection pipeline once every property in the email has finished routing.</inlineHelpText>
    <label>Routed Outcomes</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>