force-app/main/default/objects/Portfolio_Deal__c/fields/Source_Staging_Id__c.field-meta.xml
<CustomField>
    <fullName>Source_Staging_Id__c</fullName>
    <description>Text pointer (not a lookup) to the Inbound_Email_Staging__c row that produced this portfolio deal, mirroring Inbound_Email_Staging__c.Result_Record_Id__c's Text-pointer precedent.</description>
    <inlineHelpText>Do not edit directly. Set by the Broker Protection pipeline to the originating staging record Id.</inlineHelpText>
    <label>Source Staging Id</label>
    <length>18</length>
    <type>Text</type>
</CustomField>